--- a/siofs/src/Styles/Alta.css
+++ b/siofs/src/Styles/Alta.css
@@ -117,8 +117,13 @@ textarea {
   font-family: 'Jost', sans-serif;
 }
 
-/* Hover effect para los botones */
-.AltaSubmitButton:hover,
-.AltaCancelButton:hover {
-  opacity: 0.7;
+
+
+
+.logo {
+  position: absolute;
+  right: 20px;  
+  top: 20px;
+  width: 100px;
+  height: auto;
 }
