--- a/siofs/src/Styles/Historial_Etapa.css
+++ b/siofs/src/Styles/Historial_Etapa.css
@@ -44,22 +44,6 @@ nav ul li a {
   line-height: 150%;
 }
 
-.profile-pic {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-}
-
-.profile-pic img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.role {
-  color: green;
-}
 
 
 .content1 {
@@ -142,15 +126,18 @@ nav ul li a {
   font-family: 'Jost', sans-serif;
 
   position: absolute;
-  width: 180px;
+  width: 160px;
   height: 50px;
   right: 700px;
   top: 400px; /* mover el botón hacia arriba */
-
   background: #74B22C;
   border-radius: 20px;
   color: #FFFFFF;
 }
+.capture-button:hover{
+  background: #286700;
+}
+
 .icon {
   width: 20px; 
   height: 20px;
@@ -171,4 +158,12 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .logout a:hover {
   color: darkred; 
+}
+
+.logo {
+  position: absolute;
+  right: 20px;  
+  top: 20px;
+  width: 100px;
+  height: auto;
 }
